Fix lighttpd config

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,3 +1,8 @@
 server.modules += ( "mod_accesslog" )
 server.errorlog = "/dev/stderr"
 accesslog.filename = "/dev/stdout"
+
+server.document-root = "/var/www/localhost/htdocs"
+server.port = 80
+
+server.network-backend = "writev"
