--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -5,4 +5,11 @@ accesslog.filename = "/dev/stdout"
 server.document-root = "/var/www/localhost/htdocs"
 server.port = 80
 
+mimetype.assign             = (
+  ".gif"          =>      "image/gif",
+  ".png"          =>      "image/png",
+  ".css"          =>      "text/css",
+  ".html"         =>      "text/html"
+)
+
 server.network-backend = "writev"
