Set user to lighttpd

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -5,6 +5,9 @@ accesslog.filename = "/dev/stdout"
 server.document-root = "/var/www/localhost/htdocs"
 server.port = 80
 
+server.username = "lighttpd" 
+server.groupname = "lighttpd" 
+
 mimetype.assign             = (
   ".gif"          =>      "image/gif",
   ".png"          =>      "image/png",
