Set default index file

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -15,4 +15,6 @@ mimetype.assign             = (
   ".html"         =>      "text/html"
 )
 
+index-file.names = ( "index.html" )
+
 server.network-backend = "writev"
