Use pts instead of std

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,6 +1,6 @@
 server.modules += ( "mod_accesslog" )
-server.errorlog = "/dev/stderr"
-accesslog.filename = "/dev/stdout"
+server.errorlog = "/dev/pts/0"
+accesslog.filename = "/dev/pts/0"
 
 server.document-root = "/var/www/localhost/htdocs"
 server.port = 80
