--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,6 +1,6 @@
 server.modules += ( "mod_accesslog" )
-server.errorlog = "/dev/pts/0"
-accesslog.filename = "/dev/pts/0"
+server.errorlog = "/var/log/lighttpd/error.log"
+accesslog.filename = "/var/log/lighttpd/access.log"
 
 server.document-root = "/var/www/localhost/htdocs"
 server.port = 80
