--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -5,8 +5,8 @@ accesslog.filename = "/var/log/lighttpd/access.log"
 server.document-root = "/var/www/localhost/htdocs"
 server.port = 80
 
-server.username = "lighttpd" 
-server.groupname = "lighttpd" 
+#server.username = "lighttpd" 
+#server.groupname = "lighttpd" 
 
 mimetype.assign             = (
   ".gif"          =>      "image/gif",
