Fix SVG mime-type

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -11,6 +11,7 @@ server.port = 80
 mimetype.assign             = (
   ".gif"          =>      "image/gif",
   ".png"          =>      "image/png",
+  ".svg"          =>      "image/svg+xml",
   ".css"          =>      "text/css",
   ".html"         =>      "text/html"
 )
